# QuantumZero-SDK

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  deploy.ps1  deploy.sh  docker-compose.yml
diagrams/: crypto_validation.mmd
issuer_app/: Cargo.toml  Dockerfile
issuer_app/src/: acapy_client.rs  api_client.rs  indy_transactions.rs  main.rs
issuer_app/static/: index.html
quantumzero_dart_sdk/: README.md  pubspec.yaml
quantumzero_dart_sdk/example/: validation_runner.dart
quantumzero_dart_sdk/lib/src/: crypto_core.dart
quantumzero_dart_sdk/test/: crypto_core_test.dart
quantumzero_rust_sdk/: Cargo.toml  README.md
quantumzero_rust_sdk/.cargo/: config.toml
quantumzero_rust_sdk/benches/: crypto_benchmark.rs
quantumzero_rust_sdk/examples/: issuer_integration.rs
quantumzero_rust_sdk/src/: anoncreds_ffi.rs  crypto_core.rs  lib.rs
verifier_app/: Cargo.toml  Dockerfile
verifier_app/src/: acapy_client.rs  api_client.rs  main.rs  main_old.rs  presentation_correlator.rs  presentation_storage.rs  telemetry_client.rs
verifier_app/static/: index.html
