[workspace]
members = ["quantumzero_rust_sdk", "issuer_app"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
actix-web = "4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
hex = "0.4"
