[package]
name = "quantumzero_rust_sdk"
version = "1.0.0"
edition = "2021"
authors = ["ChateauForge LLC"]
description = "A Rust SDK for the QuantumZero identity platform - issuer integration"
license = "Private"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# AnonCreds for ZKP proofs and credentials  
anoncreds = { git = "https://github.com/hyperledger/anoncreds-rs", branch = "main", features = ["vendored"] }

# Cryptographic primitives
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
p256 = { version = "0.13", features = ["ecdsa"] }
signature = "2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Encoding/Decoding
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "crypto_benchmark"
harness = false
