[package]
name = "verifier_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
actix-web.workspace = true
actix-files = "0.6"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
qrcode = "0.14"
base64.workspace = true
url = "2.5"
